Collection Instance object highlight wrong #64438

Closed
opened 2019-05-10 14:57:17 +02:00 by Sebastian Koenig · 14 comments

System Information
Operating system: elementaryOS 0.4.1
Graphics card: GTX 1080

Blender Version
Broken: 2.80, 259ebdd017

Worked: did work couple of revisions back

Short description of error
Objects in nested Collections are highlighted wrong when selected. In one case the Empty Axis itself is highlighted correctly, while the outline is not highlighted. In the other case the object gets highlighted when the collection instance is highlighted, even though the object instance isn't even part of the collection. It's kinda hard to describe...

Exact steps for others to reproduce the error
Open this file. collection_selection_hightlight.blend
The scene 'Scene.001' is open, where I have created 2 collection instances.
Notice how the object 'cube_instance' has a highlighted origin, but not the outline.
However, if you select the object 'supergroup', there are two cubes highlighted, even though only one of them is actually part of the collection.
The Objects and Collections are setup in the other scene 'Scene'.
Somehow the nesting messes up the selection highlighting.

**System Information** Operating system: elementaryOS 0.4.1 Graphics card: GTX 1080 **Blender Version** Broken: 2.80, 259ebdd01725 Worked: did work couple of revisions back **Short description of error** Objects in nested Collections are highlighted wrong when selected. In one case the Empty Axis itself is highlighted correctly, while the outline is not highlighted. In the other case the object gets highlighted when the collection instance is highlighted, even though the object instance isn't even part of the collection. It's kinda hard to describe... **Exact steps for others to reproduce the error** Open this file. [collection_selection_hightlight.blend](https://archive.blender.org/developer/F7024873/collection_selection_hightlight.blend) The scene 'Scene.001' is open, where I have created 2 collection instances. Notice how the object 'cube_instance' has a highlighted origin, but not the outline. However, if you select the object 'supergroup', there are two cubes highlighted, even though only one of them is actually part of the collection. The Objects and Collections are setup in the other scene 'Scene'. Somehow the nesting messes up the selection highlighting.
Author
Member

Added subscriber: @sebastian_k

Added subscriber: @sebastian_k
Author
Member

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Author
Member

Found an interesting twist to this bug.
I have created a collection instance of the collection 'supergroup' in the first Scene, called 'supergroup_instance'.
If you open this file collection_selection_hightlight.blend,
'supergroup_instance' is selected. But only the Empty crosses of it are highlighted, not the outline.
Now if you exclude the collection 'supergroup' from the viewlayer with the checkmark toggle, 'supergroup_instance' becomes highlighted.
Sounds like something for @dfelinto? :)

Found an interesting twist to this bug. I have created a collection instance of the collection 'supergroup' in the first Scene, called 'supergroup_instance'. If you open this file [collection_selection_hightlight.blend](https://archive.blender.org/developer/F7040416/collection_selection_hightlight.blend), 'supergroup_instance' is selected. But only the Empty crosses of it are highlighted, not the outline. Now if you exclude the collection 'supergroup' from the viewlayer with the checkmark toggle, 'supergroup_instance' becomes highlighted. Sounds like something for @dfelinto? :)
Dalai Felinto self-assigned this 2019-05-16 16:43:46 +02:00

Added subscriber: @brecht

Added subscriber: @brecht

Before getting into your more complicated file I reproduce some strange behaviour that I will look at it first:

instance_collection_select.blend

image.png

To reproduce the bug just select the "A - I have a torus" collection that is INSIDE the "B - I instanced a torus"

What to expect: Nothing gets selected.
What we get: The torus gets selected.

Note: The camera is there so you can reliably reset the selected object.

Before getting into your more complicated file I reproduce some strange behaviour that I will look at it first: [instance_collection_select.blend](https://archive.blender.org/developer/F7065773/instance_collection_select.blend) ![image.png](https://archive.blender.org/developer/F7065778/image.png) To reproduce the bug just select the "A - I have a torus" collection that is INSIDE the "B - I instanced a torus" What to expect: Nothing gets selected. What we get: The torus gets selected. Note: The camera is there so you can reliably reset the selected object.

My suggestion which I will look at:

  1. In View Layer clicking in a collection NEVER select its objects.
  2. In Scenes and Blender File we can keep this behaviour.
  3. Selecting the instance (Empty) itself should should the instanced collection as selected..
My suggestion which I will look at: 1) In `View Layer` clicking in a collection NEVER select its objects. 2) In `Scenes` and `Blender File` we can keep this behaviour. 3) Selecting the instance (Empty) itself should should the instanced collection as selected..

Added subscriber: @ZedDB

Added subscriber: @ZedDB

I'll mark this as confirmed as it seems like it has been reproduced and a partial fix has already made it in.

I'll mark this as confirmed as it seems like it has been reproduced and a partial fix has already made it in.

Added subscriber: @crantisz

Added subscriber: @crantisz

Affects me to.
here the step, were it was broken:

Broken: version: 2.80 (sub 74), branch: blender2.7, commit date: 2019-06-11 21:45, hash: d93a7290e5
Broken: version: 2.80 (sub 61), branch: blender2.7, commit date: 2019-05-12 22:25, hash: 05f1451d72
Worked: version: 2.80 (sub 60), branch: blender2.7, commit date: 2019-05-07 19:17, hash: 3dc9da3a74

beetween 60 and 61 subversions.

here my test file:

instance selection test.blend

Looks like instance outlines only if first instance selected also,

Affects me to. here the step, were it was broken: Broken: version: 2.80 (sub 74), branch: blender2.7, commit date: 2019-06-11 21:45, hash: `d93a7290e5` Broken: version: 2.80 (sub 61), branch: blender2.7, commit date: 2019-05-12 22:25, hash: `05f1451d72` Worked: version: 2.80 (sub 60), branch: blender2.7, commit date: 2019-05-07 19:17, hash: `3dc9da3a74` beetween 60 and 61 subversions. here my test file: [instance selection test.blend](https://archive.blender.org/developer/F7100034/instance_selection_test.blend) Looks like instance outlines only if first instance selected also,
Member

Added subscribers: @fclem, @lichtwerk

Added subscribers: @fclem, @lichtwerk
Member

Just bisected a seemingly related task (#66295), and that one was broken by 6df7946f73, b6b3a57c22, so adding @fclem here... [not quite sure if these are indeed duplicates...]

Just bisected a seemingly related task (#66295), and that one was broken by 6df7946f73, b6b3a57c22, so adding @fclem here... [not quite sure if these are indeed duplicates...]

This issue was referenced by 57c26453f8

This issue was referenced by 57c26453f8aa3ad49a8927f5e299dcab1f2c510b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64438
No description provided.