Outliner: Fix selecting collections in view layer selecting original objects

Part of T64438.